--- a/index.html
+++ b/index.html
@@ -6,131 +6,138 @@
 </head>
 <body>
     <header class="page-header">
-        <nav class="main-navigation">
-
-            <a class="main-header-logo">
+        <nav class="page-navigation">
+            <a class="page-header-logo">
                 <img src="img/index-logo.svg" width="160px" height="65px" alt="Логотип Нердс">
             </a>
-
             <ul class="site-navigation">
-                <li><a href="studio.html">Студия</a></li>
-                <li><a href="clients.html">Клиенты</a></li>
-                <li><a href="shop.html">Магазин</a></li>
-                <li><a href="contacts.html">Контакты</a></li>
+                <li class="site-navigation-item"><a href="studio.html">Студия</a></li>
+                <li class="site-navigation-item"><a href="clients.html">Клиенты</a></li>
+                <li class="site-navigation-item"><a href="shop.html">Магазин</a></li>
+                <li class="site-navigation-item"><a href="contacts.html">Контакты</a></li>
             </ul>
-
             <div class="basket">
                 <a href="basket.html">Корзина</a>
             </div>
         </nav>
     </header>
-<main class="main-content">
-    <span class="slogan1">
-        <p>Долго, дорого, скурпулезно</p>
-    </span>
-    <span class="slogan2">
-        <p>Математически выверенный дизайн для вашего сайта или мобильного приложения</p>
-    </span>
-    <div>
-          <a href="studio.html">Узнать больше</a>
-    </div>
-    <div>
-      <img src="phones.jpg>
+    <main class="main-content">
+        <span class="slogan1">
+            <p>Долго, дорого, скурпулезно</p>
+        </span>
+        <span class="slogan2">
+            <p>Математически выверенный дизайн для вашего сайта или мобильного приложения</p>
+        </span>
+        <div>
+              <a href="studio.html">Узнать больше</a>
+        </div>
+        <div>
+          <img src="phones.jpg">
+        </div>
+            <h1 class="visually-hidden">Нердс</h1>
 
-    </div>
-        <h1 class="visually-hidden">Нердс</h1>
+        <section class="products">
+            <h2 class="visually-hidden">Продукты</h2>
+            <ul class="products-list">
+                <li class="products-item">
+                    <img src="web.jpg" class="img-products" alt="Веб-сайты">
+                    <h3 class="product-title">Веб-сайты</h3>
+                    <p class="product-subtitle">
+                        Мир никогда не будет прежним после того как увидит ваш сайт!
+                    </p>
+                    <a class="button" href="order-web.html">Заказ</a>
+                </li>
+                <li class="products-item">
+                    <img src="application.jpg" class="img-products" alt="Приложения">
+                    <h3 class="product-title">Приложения</h3>
+                    <p class="product-subtitle">
+                        Покорите ТОП-10 приложений в AppStore и GooglePlay
+                    </p>
+                    <a class="button" href="order-application.html">Заказ</a>
+                </li>
+                <li class="products-item">
+                    <img src="presentation.jpg" class="img-products" alt="Презентации">
+                    <h3 class="product-title">Презентации</h3>
+                    <p class="product-subtitle">
+                        Вы даже не подозреваете насколько вы изумительны!
+                    </p>
+                    <a class="button" href="order-presentation.html">Заказ</a>
+                </li>
+            </ul>
+        </section>
 
-<section class="products">
-    <h2 class="visually-hidden">Продукты</h2>
-    <ul class="products-list">
-        <li class="products-item">
-            <img src="web.jpg" class="img-products" alt="Веб-сайты">
-            <h3>Веб-сайты</h3>
-            <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
-            <a class="button" href="order-web.html">Заказ</a>
-        </li>
-        <li class="products-item">
-            <img src="application.jpg" class="img-products" alt="Приложения">
-            <h3>Приложения</h3>
-            <p>Покорите ТОП-10 приложений в AppStore и GooglePlay</p>
-            <a class="button" href="order-application.html">Заказ</a>
-        </li>
-        <li class="products-item">
-            <img src="presentation.jpg" class="img-products" alt="Презентации">
-            <h3>Презентации</h3>
-            <p>Вы даже не подозреваете насколько вы изумительны!</p>
-            <a class="button" href="order-presentation.html">Заказ</a>
-        </li>
-    </ul>
-</section>
-
-<section class="description">
-    <h2 class="visually-hidden">О студии</h2>
-    <div class="left-col">
-        <p>Мы маленькая, но гордая дизайн-студия из Краснодара</p>
-        <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
-        <h4>Выполняем заказы на разработку</h4>
-        <ul class="assortment-list">
-            <li>Веб-сайтов любой сложности</li>
-            <li>Мобильных приложений для iOS и Android</li>
-            <li>Слайдшоу и видео для корпоративных презентаций</li>
+        <section class="description">
+            <h2 class="visually-hidden">О студии</h2>
+            <div class="left-col">
+                <p>Мы маленькая, но гордая дизайн-студия из Краснодара</p>
+                <p>Исповедуем принципы минимализма и чистоты.
+                    Ставим математический расчет превыше креатива.
+                    Работаем не покладая рук, как роботы.
+                </p>
+                <p>Выполняем заказы на разработку</p>
+                <ul class="assortment-list">
+                    <li class="assortment-list-item">Веб-сайтов любой сложности</li>
+                    <li class="assortment-list-item">Мобильных приложений для iOS и Android</li>
+                    <li class="assortment-list-item">Слайдшоу и видео для корпоративных презентаций</li>
+                </ul>
+            </div>
+            <div class="right-col">
+                <img src="nerds_balloons.jpg" class="nerds-balloons" alt="Нердс">
+                <table>
+                    <caption>С 2004 года любим точность во всем</caption>
+                        <tr>
+                            <td>146%</td>
+                            <td>100%</td>
+                            <td>50%</td>
+                        </tr>
+                        <tr>
+                            <th>Уровень самоотдачи</th>
+                            <th>Соблюдение сроков</th>
+                            <th>Минимальная предоплата</th>
+                        </tr>
+                </table>
+            </div>
+        </section>
+        <section class="partners">
+            <h2 class="visually-hidden">Наши партнеры</h2>
+            <ul class="partners-logo">
+                <li class="partners-logo-item">
+                    <img src="htmlacademy.jpg" alt="Логотип HTML-Academy">
+                </li>
+                <li class="partners-logo-item">
+                    <img src="borodinsky.jpg" alt="Логотип Бородинский">
+                </li>
+                <li class="partners-logo-item">
+                    <img src="pink.jpg" alt="Логотип Pink">
+                </li>
+                <li class="partners-logo-item">
+                    <img src="mishka.jpg" alt="Логотип Mishka">
+                </li>
+            </ul>
+        </div>
+        <section class="map">
+            <h2 class="visually-hidden">Карта</h2>
+            <script src='https://maps.googleapis.com/maps/api/js?v=3.exp'></script><div style='overflow:hidden;height:440px;width:700px;'><div id='gmap_canvas' style='height:440px;width:700px;'></div><div><small><a href="https://embedgooglemaps.com/it/">embedgooglemaps IT</a></small></div><div><small><a href="https://mrpromokod.ru/m-video/">Больше</a></small></div><style>#gmap_canvas img{max-width:none!important;background:none!important}</style></div><script type='text/javascript'>function init_map(){var myOptions = {zoom:10,center:new google.maps.LatLng(59.93899686019423,30.323659670459847),mapTypeId: google.maps.MapTypeId.ROADMAP};map = new google.maps.Map(document.getElementById('gmap_canvas'), myOptions);marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(59.93899686019423,30.323659670459847)});infowindow = new google.maps.InfoWindow({content:'<strong>Название</strong><br>Б.конюшенная, 19/8 st petersburg, Russia<br>'});google.maps.event.addListener(marker, 'click', function(){infowindow.open(map,marker);});infowindow.open(map,marker);}google.maps.event.addDomListener(window, 'load', init_map);</script>
+        </section>
+        <section class="contacts">
+            <p>NERDS DESIGN STUDIO</p>
+            <p>
+                191186, Санкт-Петербург<br>
+                ул.Б.Конюшенная, д.19/8<br>
+                +7(812)275-75-75
+            </p>
+        </section>
+    </main>
+    <footer>
+        <ul class=social-list>
+            <li class="social-list-item"><a href="#" class="vk">вконтакте</a></li>
+            <li class="social-list-item"><a href="#" class="fb">facebook</a></li>
+            <li class="social-list-item"><a href="#" class="instagram">instagram</a></li>
         </ul>
-    </div>
-    <div class="right-col">
-        <img src="nerds_balloons.jpg" class="nerds-balloons" alt="Нердс">
-        <table>
-            <caption>С 2004 года любим точность во всем</caption>
-                <tr>
-                    <th>146%</th>
-                    <th>100%</th>
-                    <th>50%</th>
-                </tr>
-                <tr>
-                    <td>Уровень самоотдачи</td>
-                    <td>Соблюдение сроков</td>
-                    <td>Минимальная предоплата</td>
-                </tr>
-        </table>
-    </div>
-</section>
-<section class="partners">
-    <h2 class="visually-hidden">Наши партнеры</h2>
-    <ul class="partners-logo">
-        <li>
-            <img src="htmlacademy.jpg" alt="Логотип HTML-Academy">
-        </li>
-        <li>
-            <img src="borodinsky.jpg" alt="Логотип Бородинский">
-        </li>
-        <li>
-            <img src="pink.jpg" alt="Логотип Pink">
-        </li>
-        <li>
-            <img src="mishka.jpg" alt="Логотип Mishka">
-        </li>
-    </ul>
-</div>
-<section class="map">
-    <h2 class="visually-hidden">Карта</h2>
-    <script src='https://maps.googleapis.com/maps/api/js?v=3.exp'></script><div style='overflow:hidden;height:440px;width:700px;'><div id='gmap_canvas' style='height:440px;width:700px;'></div><div><small><a href="https://embedgooglemaps.com/it/">embedgooglemaps IT</a></small></div><div><small><a href="https://mrpromokod.ru/m-video/">Больше</a></small></div><style>#gmap_canvas img{max-width:none!important;background:none!important}</style></div><script type='text/javascript'>function init_map(){var myOptions = {zoom:10,center:new google.maps.LatLng(59.93899686019423,30.323659670459847),mapTypeId: google.maps.MapTypeId.ROADMAP};map = new google.maps.Map(document.getElementById('gmap_canvas'), myOptions);marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(59.93899686019423,30.323659670459847)});infowindow = new google.maps.InfoWindow({content:'<strong>Название</strong><br>Б.конюшенная, 19/8 st petersburg, Russia<br>'});google.maps.event.addListener(marker, 'click', function(){infowindow.open(map,marker);});infowindow.open(map,marker);}google.maps.event.addDomListener(window, 'load', init_map);</script>
-</section>
-<section class="contacts">
-    <p>NERDS DESIGN STUDIO</p>
-    <p>191186, Санкт-Петербург<br>
-    ул.Б.Конюшенная, д.19/8<br>
-    +7(812)275-75-75</p>
-</section>
-</main>
-<footer>
-    <section class="social-media">
-        <ul class=social>
-            <li><a href="#" class="vk">вконтакте</a></li>
-            <li><a href="#" class="fb">facebook</a></li>
-            <li><a href="#" class="instagram">instagram</a></li>
-        </ul>
-        <h2>Давайте дружить, это выгодно!</h2>
-        <p>Скидки 10% для друзей из социальных сетей!</p>
-    </section>
-</footer>
+        <div class="promo">
+            <p>Давайте дружить, это выгодно!</p>
+            <p>Скидки 10% для друзей из социальных сетей!</p>
+        </div>
+    </footer>
 </body>
 </html>
