--- a/index.html
+++ b/index.html
@@ -3,121 +3,152 @@
 <head>
     <meta charset="utf-8">
     <title>HTML Academy: Нёрдс</title>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,500,500i,700,700i&amp;subset=cyrillic" rel="stylesheet">
 </head>
 <body>
     <header class="page-header">
-        <nav class="page-navigation">
-            <a class="page-header-logo">
-                <img src="img/index-logo.svg" width="160px" height="65px" alt="Логотип Нердс">
-            </a>
-            <ul class="site-navigation">
-                <li class="site-navigation-item"><a href="studio.html">Студия</a></li>
-                <li class="site-navigation-item"><a href="clients.html">Клиенты</a></li>
-                <li class="site-navigation-item"><a href="shop.html">Магазин</a></li>
-                <li class="site-navigation-item"><a href="contacts.html">Контакты</a></li>
-            </ul>
-            <div class="basket">
-                <a href="basket.html">Корзина</a>
-            </div>
-        </nav>
+        <div class="page-header-wrapper">
+            <nav class="page-navigation">
+                <a class="page-header-logo">
+                    <div class="nerds-logo-header">
+                        <img src="img/nerds-logo.png" width="160px" height="67px" alt="Логотип Нердс">
+                    </div>
+                </a>
+                <div class="site-navigation-wrapper">
+                    <ul class="site-navigation">
+                        <li class="site-navigation-item"><a href="studio.html"><b>Студия</b></a></li>
+                        <li class="site-navigation-item"><a href="clients.html"><b>Клиенты</b></a></li>
+                        <li class="site-navigation-item"><a href="shop.html"><b>Магазин</b></a></li>
+                        <li class="site-navigation-item"><a href="contacts.html"><b>Контакты</b></a></li>
+                    </ul>
+                    <div class="basket">
+                        <a href="basket.html"><b>Корзина</b></a>
+                    </div>
+                </div>
+            </nav>
+        </div>
     </header>
     <main class="main-content">
-        <span class="slogan1">
-            <p>Долго, дорого, скурпулезно</p>
-        </span>
-        <span class="slogan2">
-            <p>Математически выверенный дизайн для вашего сайта или мобильного приложения</p>
-        </span>
-        <div>
-              <a href="studio.html">Узнать больше</a>
-        </div>
-        <div>
-          <img src="phones.jpg">
-        </div>
+        <section id="slide-group" class="slider">
+            <div class="slide-wrapper content-wrapper">
+                <input name="slide-control" id="slide-one-btn" class="visually-hidden slider-radio" type="radio" checked>
+                <input name="slide-control" id="slide-two-btn" class="visually-hidden slider-radio" type="radio">
+                <input name="slide-control" id="slide-three-btn" class="visually-hidden slider-radio" type="radio">
+            <div class="slider-control">
+                <label class="slide-control-item slide-control-item-one" for="slide-one-btn">Первый</label>
+                <label class="slide-control-item slide-control-item-two" for="slide-two-btn">Второй</label>
+                <label class="slide-control-item slide-control-item-three" for="slide-three-btn">Третий</label>
+            </div>
+            <ul class="slider-list">
+                <li class="slide-item">
+                    <h2 class="slide-title">Долго, дорого,<br> скрупулезно.</h2>
+                    <p class="slide-subtitle">Математически выверенный дизайн<br> для вашего сайта или мобильного приложения.</p>
+                    <a class="slide-item-button button btn-color-red" href="img/slider-1.jpg">Узнать больше</a>
+                </li>
+         <li class="slide-item">
+               <h2 class="slide-title">Любим математику как никто другой</h3>
+               <p class="slide-subtitle">Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
+               <a class="slide-item-button button btn-color-red " href="img/slider-2.jpg">Узнать больше</a>
+         </li>
+         <li class="slide-item">
+             <h2 class="slide-title">Только ночь,<br> только хардкор</h3>
+             <p class="slide-subtitle">Работать днем, как все? Мы против этого.<br> Ближе к полуночи работа только начинается.</p>
+             <a class="slide-item-button button btn-color-red" href="img/slider-3.jpg">Узнать больше</a>
+         </li>
+       </ul>
+     </div>
+   </section>
+        <div class="main-content-wrapper">
             <h1 class="visually-hidden">Нердс</h1>
-
-        <section class="products">
-            <h2 class="visually-hidden">Продукты</h2>
-            <ul class="products-list">
-                <li class="products-item">
-                    <img src="web.jpg" class="img-products" alt="Веб-сайты">
-                    <h3 class="product-title">Веб-сайты</h3>
-                    <p class="product-subtitle">
-                        Мир никогда не будет прежним после того как увидит ваш сайт!
-                    </p>
-                    <a class="button" href="order-web.html">Заказ</a>
-                </li>
-                <li class="products-item">
-                    <img src="application.jpg" class="img-products" alt="Приложения">
-                    <h3 class="product-title">Приложения</h3>
-                    <p class="product-subtitle">
-                        Покорите ТОП-10 приложений в AppStore и GooglePlay
-                    </p>
-                    <a class="button" href="order-application.html">Заказ</a>
-                </li>
-                <li class="products-item">
-                    <img src="presentation.jpg" class="img-products" alt="Презентации">
-                    <h3 class="product-title">Презентации</h3>
-                    <p class="product-subtitle">
-                        Вы даже не подозреваете насколько вы изумительны!
-                    </p>
-                    <a class="button" href="order-presentation.html">Заказ</a>
-                </li>
-            </ul>
-        </section>
-
-        <section class="description">
-            <h2 class="visually-hidden">О студии</h2>
-            <div class="left-col">
-                <p>Мы маленькая, но гордая дизайн-студия из Краснодара</p>
-                <p>Исповедуем принципы минимализма и чистоты.
-                    Ставим математический расчет превыше креатива.
-                    Работаем не покладая рук, как роботы.
-                </p>
-                <p>Выполняем заказы на разработку</p>
-                <ul class="assortment-list">
-                    <li class="assortment-list-item">Веб-сайтов любой сложности</li>
-                    <li class="assortment-list-item">Мобильных приложений для iOS и Android</li>
-                    <li class="assortment-list-item">Слайдшоу и видео для корпоративных презентаций</li>
+            <section class="products">
+                <h2 class="visually-hidden">Продукты</h2>
+                <ul class="products-list">
+                    <li class="products-item">
+                        <img src="img/web-box.jpg" class="img-products" alt="Веб-сайты">
+                        <h3 class="product-title">Веб-сайты</h3>
+                        <p class="product-subtitle">
+                            Мир никогда не будет прежним <br>
+                            после того как увидит ваш сайт!
+                        </p>
+                        <a class="button" href="order-web.html">Заказ</a>
+                    </li>
+                    <li class="products-item">
+                        <img src="img/mobile-box.jpg" class="img-products" alt="Приложения">
+                        <h3 class="product-title">Приложения</h3>
+                        <p class="product-subtitle">
+                            Покорите ТОП-10 приложений в <br>
+                            AppStore и GooglePlay
+                        </p>
+                        <a class="button" href="order-application.html">Заказ</a>
+                    </li>
+                    <li class="products-item">
+                        <img src="img/presentation-box.jpg" class="img-products" alt="Презентации">
+                        <h3 class="product-title">Презентации</h3>
+                        <p class="product-subtitle">
+                            Вы даже не подозреваете, <br>
+                            насколько вы изумительны!
+                        </p>
+                        <a class="button" href="order-presentation.html">Заказ</a>
+                    </li>
                 </ul>
-            </div>
-            <div class="right-col">
-                <img src="nerds_balloons.jpg" class="nerds-balloons" alt="Нердс">
-                <table>
-                    <caption>С 2004 года любим точность во всем</caption>
-                        <tr>
-                            <td>146%</td>
-                            <td>100%</td>
-                            <td>50%</td>
-                        </tr>
-                        <tr>
-                            <th>Уровень самоотдачи</th>
-                            <th>Соблюдение сроков</th>
-                            <th>Минимальная предоплата</th>
-                        </tr>
-                </table>
-            </div>
-        </section>
-        <section class="partners">
-            <h2 class="visually-hidden">Наши партнеры</h2>
-            <ul class="partners-logo">
-                <li class="partners-logo-item">
-                    <img src="htmlacademy.jpg" alt="Логотип HTML-Academy">
-                </li>
-                <li class="partners-logo-item">
-                    <img src="borodinsky.jpg" alt="Логотип Бородинский">
-                </li>
-                <li class="partners-logo-item">
-                    <img src="pink.jpg" alt="Логотип Pink">
-                </li>
-                <li class="partners-logo-item">
-                    <img src="mishka.jpg" alt="Логотип Mishka">
-                </li>
-            </ul>
+            </section>
+            <section class="description">
+                <h2 class="visually-hidden">О студии</h2>
+                <div class="left-col">
+                    <p class="who-we-are"> <strong>Мы маленькая, но гордая <br> дизайн-студия из Краснодара.</strong></p>
+                    <p class="description-text">Исповедуем принципы минимализма и чистоты.
+                        Ставим математический расчет <br>
+                        превыше креатива.
+                        Работаем не покладая рук, как роботы.
+                    </p>
+                    <p class="orders-to-develop"><b>Выполняем заказы на разработку:</b></p>
+                    <ul class="assortment-list">
+                        <li class="assortment-list-item">Веб-сайтов любой сложности</li>
+                        <li class="assortment-list-item">Мобильных приложений для iOS и Android</li>
+                        <li class="assortment-list-item">Слайдшоу и видео для корпоративных презентаций</li>
+                    </ul>
+                </div>
+                <div class="right-col">
+                    <img src="img/nerds-balloons.png" class="nerds-balloons" alt="Нердс">
+                    <table class="advantages-table">
+                        <caption><b>С 2004 года любим точность во всем:</b></caption>
+                            <tr class="anvantages-row-first">
+                                <td class="advantages-row-first-item">146<span class="percent">%</span></td>
+                                <td class="advantages-row-first-item">100<span class="percent">%</span></td>
+                                <td class="advantages-row-first-item">50<span class="percent">%</span></td>
+                            </tr>
+                            <tr class="anvantages-row-second">
+                                <th class="advantages-row-second-item">Уровень<br>самоотдачи</th>
+                                <th class="advantages-row-second-item">Соблюдение<br> сроков</th>
+                                <th class="advantages-row-second-item">Минимальная<br>предоплата</th>
+                            </tr>
+                    </table>
+                </div>
+            </section>
+            <section class="partners">
+                <h2 class="visually-hidden">Наши партнеры</h2>
+                    <div class="partners-logo-wrapper">
+                        <ul class="partners-logo">
+                            <li class="partners-logo-item">
+                                <img src="img/logo-html-academy.png" alt="Логотип HTML-Academy">
+                            </li>
+                            <li class="partners-logo-item">
+                                <img src="img/logo-borodinsky.png" alt="Логотип Бородинский">
+                            </li>
+                            <li class="partners-logo-item">
+                                <img src="img/logo-pink.png" alt="Логотип Pink">
+                            </li>
+                            <li class="partners-logo-item">
+                                <img src="img/logo-mishka.png" alt="Логотип Mishka">
+                            </li>
+                        </ul>
+                    </div>
         </div>
         <section class="map">
             <h2 class="visually-hidden">Карта</h2>
-            <script src='https://maps.googleapis.com/maps/api/js?v=3.exp'></script><div style='overflow:hidden;height:440px;width:700px;'><div id='gmap_canvas' style='height:440px;width:700px;'></div><div><small><a href="https://embedgooglemaps.com/it/">embedgooglemaps IT</a></small></div><div><small><a href="https://mrpromokod.ru/m-video/">Больше</a></small></div><style>#gmap_canvas img{max-width:none!important;background:none!important}</style></div><script type='text/javascript'>function init_map(){var myOptions = {zoom:10,center:new google.maps.LatLng(59.93899686019423,30.323659670459847),mapTypeId: google.maps.MapTypeId.ROADMAP};map = new google.maps.Map(document.getElementById('gmap_canvas'), myOptions);marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(59.93899686019423,30.323659670459847)});infowindow = new google.maps.InfoWindow({content:'<strong>Название</strong><br>Б.конюшенная, 19/8 st petersburg, Russia<br>'});google.maps.event.addListener(marker, 'click', function(){infowindow.open(map,marker);});infowindow.open(map,marker);}google.maps.event.addDomListener(window, 'load', init_map);</script>
+
         </section>
         <section class="contacts">
             <p>NERDS DESIGN STUDIO</p>
@@ -129,14 +160,16 @@
         </section>
     </main>
     <footer>
-        <ul class=social-list>
-            <li class="social-list-item"><a href="#" class="vk">вконтакте</a></li>
-            <li class="social-list-item"><a href="#" class="fb">facebook</a></li>
-            <li class="social-list-item"><a href="#" class="instagram">instagram</a></li>
-        </ul>
-        <div class="promo">
-            <p>Давайте дружить, это выгодно!</p>
-            <p>Скидки 10% для друзей из социальных сетей!</p>
+        <div class="footer-wrapper">
+            <ul class=social-list>
+                <li class="social-list-item"><a href="#" class="vk">вконтакте</a></li>
+                <li class="social-list-item"><a href="#" class="fb">facebook</a></li>
+                <li class="social-list-item"><a href="#" class="instagram">instagram</a></li>
+            </ul>
+            <div class="promo">
+                <p>Давайте дружить, это выгодно!</p>
+                <p>Скидки 10% для друзей из социальных сетей!</p>
+            </div>
         </div>
     </footer>
 </body>
