--- a/index.html
+++ b/index.html
@@ -31,35 +31,45 @@
         </div>
     </header>
     <main class="main-content">
-        <section id="slide-group" class="slider">
-            <div class="slide-wrapper content-wrapper">
-                <input name="slide-control" id="slide-one-btn" class="visually-hidden slider-radio" type="radio" checked>
-                <input name="slide-control" id="slide-two-btn" class="visually-hidden slider-radio" type="radio">
-                <input name="slide-control" id="slide-three-btn" class="visually-hidden slider-radio" type="radio">
-            <div class="slider-control">
-                <label class="slide-control-item slide-control-item-one" for="slide-one-btn">Первый</label>
-                <label class="slide-control-item slide-control-item-two" for="slide-two-btn">Второй</label>
-                <label class="slide-control-item slide-control-item-three" for="slide-three-btn">Третий</label>
-            </div>
-            <ul class="slider-list">
-                <li class="slide-item">
-                    <h2 class="slide-title">Долго, дорого,<br> скрупулезно.</h2>
-                    <p class="slide-subtitle">Математически выверенный дизайн<br> для вашего сайта или мобильного приложения.</p>
-                    <a class="slide-item-button button btn-color-red" href="img/slider-1.jpg">Узнать больше</a>
-                </li>
-         <li class="slide-item">
-               <h2 class="slide-title">Любим математику как никто другой</h3>
-               <p class="slide-subtitle">Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
-               <a class="slide-item-button button btn-color-red " href="img/slider-2.jpg">Узнать больше</a>
-         </li>
-         <li class="slide-item">
-             <h2 class="slide-title">Только ночь,<br> только хардкор</h3>
-             <p class="slide-subtitle">Работать днем, как все? Мы против этого.<br> Ближе к полуночи работа только начинается.</p>
-             <a class="slide-item-button button btn-color-red" href="img/slider-3.jpg">Узнать больше</a>
-         </li>
-       </ul>
-     </div>
-   </section>
+        <section class="slider">
+            <div class="slider-container">
+                <h2 class="visually-hidden">Преимущества</h2>
+                <div class="slider-controls">
+          <i></i>
+          <i class="active"></i>
+          <i></i>
+        </div>
+        <ul class="slider-list">
+          <li class="slider-item">
+            <h3>Долго, дорого,<br> скрупулезно.</h3>
+            <p>Математически выверенный дизайн<br> для вашего сайта или мобильного приложения.</p>
+            <a class="slider-item-button button" href="#">Узнать больше</a>
+          </li>
+          <li class="slider-item">
+            <h3>Любим математику как никто другой</h3>
+            <p>Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
+            <a class="slider-item-button button" href="#">Узнать больше</a>
+          </li>
+          <li class="slider-item">
+            <h3>Только ночь,<br> только хардкор</h3>
+            <p>Работать днем, как все? Мы против этого.<br> Ближе к полуночи работа только начинается.</p>
+            <a class="slider-item-button button" href="#">Узнать больше</a>
+          </li>
+        </ul>
+      </div>
+    </section>
+
+
+
+
+
+
+
+
+
+
+
+
         <div class="main-content-wrapper">
             <h1 class="visually-hidden">Нердс</h1>
             <section class="products">
@@ -167,8 +177,8 @@
                 <li class="social-list-item"><a href="#" class="instagram">instagram</a></li>
             </ul>
             <div class="promo">
-                <p>Давайте дружить, это выгодно!</p>
-                <p>Скидки 10% для друзей из социальных сетей!</p>
+                <p class="slogan-first">Давайте дружить, это выгодно!</p>
+                <p class="slogan-second">Скидки 10% для друзей из социальных сетей!</p>
             </div>
         </div>
     </footer>
